--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    width: 300px;
-    height: 250px;
+    width: 412px;
+    height: 600px;
     overflow: hidden;
 }
 
@@ -68,7 +68,7 @@ main {
     background-color: #cdc1ff;
     color: #fff;
     box-sizing: border-box;
-    height: 200px;
+    height: 550px;
     overflow: hidden;
     padding: 10px;
 }
@@ -77,3 +77,6 @@ main p {
     margin: 0;
     text-align: justify;
 }
+textarea {
+    resize: none;
+  }
